general spacing fixes

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -37,6 +37,14 @@
     height: 100%;
     margin: 0 auto;
     padding: 16px 12px;
+
+    @media (min-width: $tablet) {
+      padding: 20px 16px;
+    }
+
+    @media (min-width: $desktop) {
+      padding: 20px 64px;
+    }
   }
 
   img.header__img {
